src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsF-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 712, bounds: 1272 × 712, states: []

post-map configures:
size: 1272 × 694, bounds: 1272 × 712, states: [Activated]
